# tool-holder

./: .gitignore  Cargo.toml  LICENSE  README.md  example.env  plan.md
src/: config.rs  error.rs  ingest.rs  lib.rs  main.rs  mapping.rs
src/connector/: database.rs  file.rs  mod.rs  mongo.rs  stdout.rs
tests/: config_tests.rs  connector_database_tests.rs  connector_file_tests.rs  ingest_tests.rs
tools/example/: .env.example  config.yaml
