[package]
name = "tool-holder"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tool-holder"
path = "src/main.rs"

[lib]
name = "tool_holder"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "any", "sqlite", "postgres", "mysql"] }
mongodb = "3"
bson = { version = "2", features = ["serde_with"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
thiserror = "2"
dotenvy = "0.15"
async-trait = "0.1"
regex = "1"
hex = "0.4"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
